# local_doc_chat

./: .gitignore  LICENSE  README.md  docker-compose.yml  makefile  pyproject.toml
src/: app.py  config.py  test.py
src/data/: db.py  utils.py
src/llm/: utils.py
tests/test_config/: test_config.py
