[project]
name = "local-doc-chat"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=1.3.2",
    "langchain-openai>=0.2.14",
    "langchain-postgres>=0.0.12",
    "langchain>=0.3.13",
    "langgraph>=0.2.60",
    "markitdown>=0.0.1a3",
    "pydantic-settings>=2.7.1",
    "pydantic<=2.10.1",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
]

[tool.pytest.ini_options]
addopts = "--import-mode=append --strict-markers"
testpaths = [
    "tests",
]
pythonpath = [
  "src"
]
